Solve overflow issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,5 @@
   
 body {
     margin: 0;
-    overflow: hidden;
     min-height: 100vh;
 }
