--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -1,8 +1,9 @@
 .page {
-    height: 100vh;
+    min-height: 100vh;
     padding-top: 80px;
     padding-left: 180px;
     padding-right: 40px; 
+    overflow: auto;
 }
 
 @media (max-width: 600px) {
